--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,22 @@ img {
 
 }
 
+.line {
+    position: relative;
+}
+
+.menu-link-current::after {
+    content: '';
+    background: #2196f3;
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-radius: 2px;
+
+}
+
 .menu-link:hover,
 .menu-link:focus {
     color: var(--color-hover);
@@ -655,8 +671,9 @@ img {
     margin-bottom: 30px;
     margin-right: 30px;
     width: 370px;
-
 }
+
+
 
     
 .card-link {
@@ -666,6 +683,57 @@ img {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.slider {
+    position: relative;
+    overflow: hidden;
+}
+
+
+.slider::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    transform: translateY(100%);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: rgba(33, 150, 243, 0.9);
+
+}
+
+.aside-block:hover .slider::before {
+    transform: translateY(0);
+}
+
+.aside-block:hover .text-slider {
+    transform: translateY(0);
+}
+
+
+
+.text-slider {
+    transform: translateY(100%);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    position: absolute;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.5;
+    color: #FFFFFF;
+}
+
+
 
 .card-link:hover{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
